--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
@@ -1,5 +1,7 @@
 .upload-report {
-  padding-left: 280px;
+  position: fixed;
+  z-index: 1100;
+  background-color: white;
   width: 100%;
   height: calc(100vh - 176px);
   display: flex;
