--- a/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
+++ b/src/app/modules/admin/containers/add-mod-report/add-mod-report.component.html
@@ -41,7 +41,7 @@
                 <div class="container-input-date ">
                     <br>
                     <div class="input-wrapper">
-                        <input class="input-fecha " matInput [matDatepicker]="picker" placeholder="Fecha"
+                        <input class="input-fecha " [(ngModel)]="desde" matInput [matDatepicker]="picker" placeholder="Fecha"
                             formControlName="desde">
                         <mat-datepicker #picker></mat-datepicker>
                         <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -53,7 +53,7 @@
                     </div>
                     <br>
                     <div class="input-wrapper">
-                        <input class="input-fecha " matInput [matDatepicker]="picker2" placeholder="Fecha"
+                        <input class="input-fecha " [(ngModel)]="hasta" matInput [matDatepicker]="picker2" placeholder="Fecha"
                             formControlName="hasta">
                         <mat-datepicker #picker2></mat-datepicker>
                         <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -72,7 +72,7 @@
             <div class="container-alert">
                 <Label>Fecha de Entrega(Alerta)</Label>
                 <div class="input-wrapper">
-                    <input class="input-fecha-alerta" type="" formControlName="deliverdate" autocomplete="off" matInput [matDatepicker]="picker3"
+                    <input class="input-fecha-alerta" [(ngModel)]="deliverdate" type="" formControlName="deliverdate" autocomplete="off" matInput [matDatepicker]="picker3"
                         placeholder="Dia, Mes, Año">
                     <mat-datepicker #picker3></mat-datepicker>
                     <mat-datepicker-toggle class="input-icon" matSuffix [for]="picker3"></mat-datepicker-toggle>
