--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
@@ -1,12 +1,15 @@
+@import "../../../../../styles/variables.scss";
 .upload-report {
   position: fixed;
-  z-index: 1100;
+  top: 0;
+  left: 0;
+  z-index: 3000;
   background-color: white;
   width: 100%;
-  height: calc(100vh - 176px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 176px 119px calc(100vh - 176px - 127px) 127px;
+  grid-template-areas: "";
   .upload-report__progress {
     width: 100%;
     display: flex;
@@ -30,6 +33,7 @@
       padding-left: 30px;
     }
     .progress-bar {
+      width: auto;
     }
     .upload-report__btn-close-save {
       height: 44px;
@@ -46,6 +50,42 @@
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     overflow-y: scroll;
+  }
+}
+.header-container {
+  width: 100%;
+  font-size: 16px;
+  .header {
+    width: 100%;
+    height: 8.75em;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-bottom: 0.1875em solid $color-bg-light-grey;
+    .header__logo {
+      width: 16.25em;
+      padding: 0.5625em 0;
+    }
+  }
+  .lines-container {
+    width: 100%;
+    background-color: white;
+    padding-top: 0.5625em;
+    .lines-container__line1 {
+      width: 100%;
+      height: 0.5625em;
+      background: $color-line-up-header;
+      box-shadow: 0em 0.375em 0.5em rgba(0, 0, 0, 0.14),
+        0em 0.0625em 0.75em rgba(0, 0, 0, 0.12),
+        0em 0.1875em 0.1875em rgba(0, 0, 0, 0.2);
+    }
+    .lines-container__line2 {
+      margin-top: 0.5625em;
+      width: 100%;
+      height: 0.5625em;
+      background: $color-line-down-header;
+      box-shadow: 0em 0.25em 0.25em rgba(0, 0, 0, 0.25);
+    }
   }
 }
 .footer {
@@ -70,9 +110,20 @@
   .upload-report {
     height: calc(100vh - 132px);
   }
+  .header-container {
+    font-size: 12px; //hacemos responsive todo el componente para este viewport
+  }
 }
 @media (max-width: 768px) {
   .upload-report {
     height: calc(100vh - 110px);
+  }
+  .header-container {
+    font-size: 10px;
+    .header {
+      .header__logo {
+        margin-left: 2.25rem;
+      }
+    }
   }
 }
