--- a/src/app/modules/user/components/pop-up-start/pop-up-start.component.scss
+++ b/src/app/modules/user/components/pop-up-start/pop-up-start.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../../styles/variables.scss";
 .modal-start {
   position: fixed;
   top: 0;
@@ -8,6 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 3000;
+  background-color: $color-bg-modal;
   .modal-start__conteiner {
     display: flex;
     flex-direction: row;
