--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -12,21 +12,44 @@
       <div class="lines-container__line2"></div>
     </div>
   </section>
-  <div class="upload-report__content">
-    <section class="upload-report__progress">
-      <h1 class="upload-report__title">CARGA DE REPORTE</h1>
-      <div class="progress-bar"></div>
-      <button
-        mat-raised-button
-        class="upload-report__btn-close-save"
-        type="submit"
-        (click)="onCloseSave()"
-      >
-        Cerrar y Guardar
-      </button>
-    </section>
-    <section class="upload-report__conteiner"></section>
-  </div>
+  <section class="upload-report__progress">
+    <h1 class="upload-report__title">CARGA DE REPORTE</h1>
+    <div class="progress-bar"></div>
+    <button
+      mat-raised-button
+      class="upload-report__btn-close-save"
+      type="submit"
+      (click)="onCloseSave()"
+    >
+      Cerrar y Guardar
+    </button>
+  </section>
+  <section class="upload-report__conteiner">
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+
+    <h1>Test</h1>
+    <h1>Test</h1>
+    <h1>Test</h1>
+
+    <h1>Test</h1>
+    <h1>Test</h1>
+  </section>
   <section class="footer">
     <div></div>
     <img
