--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,6 +30,8 @@ $outline-focus: #8ac9ee;
 $outline-focus-center: #1966d298;
 $alert-text: #e41a26;
 
+$color-bg-modal: #2c2c2c2a;
+
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
 $transition: 0.2s all linear;
