Style: Hace responsive el titulo y progress para w1400px

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -51,7 +51,7 @@
     <h1>Test</h1>
   </section>
   <section class="footer">
-    <div></div>
+    <div class="footer__direction"></div>
     <img
       src="../.././../../../assets/images/logo-20a.svg"
       alt=""
