--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
@@ -22,31 +22,32 @@
     margin-top: 36px;
     grid-area: "progress";
     .upload-report__title {
-      width: 428px;
-      height: 80px;
-      background: rgba(25, 103, 210, 0.1);
-      border-radius: 0px 50px 10px 0px;
       font-size: 36px;
-      line-height: 43px;
+      width: 11.888em;
+      height: 2.222em;
+      background: rgba(25, 103, 210, 0.1);
+      border-radius: 0px 1.388em 0.277em 0px;
+      line-height: 1.194em;
       font-weight: 600;
       display: flex;
       align-items: center;
       text-align: center;
       color: #083d5e;
-      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      margin-right: 59px;
-      padding-left: 30px;
+      text-shadow: 0px 0.111em 0.111em rgba(0, 0, 0, 0.25);
+      margin-right: 1.638em;
+      margin-bottom: 0;
+      padding-left: 0.833em;
     }
     .progress-bar {
       width: auto;
     }
     .upload-report__btn-close-save {
-      height: 44px;
-      background: #92cdef;
-      border-radius: 35px;
       font-size: 20px;
-      line-height: 24px;
-      margin: 0 59px;
+      height: 2.2em;
+      background: #92cdef;
+      border-radius: 1.75em;
+      line-height: 1.2em;
+      margin: 0 2.95em;
     }
   }
   .upload-report__conteiner {
@@ -109,34 +110,60 @@
 }
 .footer {
   grid-area: "footer";
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-template-areas: "footer-direction footer-logo footer-btn";
   margin: 0 94px;
   border-top: solid 5px #344d64;
+  align-items: center;
   .footer__logo {
+    justify-self: center;
+    grid-area: "footer-logo";
     width: 255px;
     height: 80px;
   }
   .footer__btn-confirm-axe {
-    height: 44px;
-    background: #92cdef;
-    border-radius: 35px;
+    justify-self: flex-end;
+    grid-area: "footer-btn";
+    width: 165px;
     font-size: 20px;
-    line-height: 24px;
+    height: 2.2em;
+    background: #92cdef;
+    border-radius: 1.75em;
+    line-height: 1.2em;
+  }
+  .footer__direction {
+    grid-area: "footer-direction";
   }
 }
 @media (max-width: 1400px) {
   .upload-report {
-    height: calc(100vh - 132px);
+    grid-template-rows: 132px 84px auto 127px;
+    .upload-report__progress {
+      margin-top: 18px;
+      .upload-report__title {
+        font-size: 24px;
+      }
+      .upload-report__btn-close-save {
+        font-size: 16px;
+      }
+    }
+    .upload-report__conteiner {
+      margin: 24px auto 0;
+    }
   }
   .header-container {
     font-size: 12px; //hacemos responsive todo el componente para este viewport
   }
+  .footer {
+    .footer__btn-confirm-axe {
+      font-size: 16px;
+    }
+  }
 }
 @media (max-width: 768px) {
   .upload-report {
-    height: calc(100vh - 110px);
+    grid-template-rows: 110px 119px auto 127px;
   }
   .header-container {
     font-size: 10px;
