Feat: Agrega app-variable-upload a report-upload
con input de el index de alfabeto y la variable a mostrar, el output es la variable completada por el usuario

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -1,6 +1,13 @@
 <section class="report">
   <h1 class="report__title">{{ axeToUpload }}</h1>
-  <div class="report__variable" *ngFor="let variable of variableToUpload">
-    <!-- <app-preview-variable></app-preview-variable> -->
+  <div
+    class="report__variable"
+    *ngFor="let variable of variablesReport; let i = index"
+  >
+    <app-variable-upload
+      [indexAlphabet]="biAlphabet[i]"
+      [variableValue]="variable"
+      (goOutPreview)="getVariablesToUpload($event)"
+    ></app-variable-upload>
   </div>
 </section>
