Refactor: Usa servicio para enviar el click de confirmar eje
Cuando se da click a confirmar eje se envia a variables-upload para que envie la variable completada a report-upload

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -41,7 +41,7 @@
       mat-raised-button
       class="footer__btn-confirm-axe"
       type="submit"
-      (click)="onCloseSave()"
+      (click)="onConfirmAxe()"
     >
       Confirmar Eje
     </button>
