--- a/src/app/modules/user/components/variable-upload/variable-upload.component.scss
+++ b/src/app/modules/user/components/variable-upload/variable-upload.component.scss
@@ -65,6 +65,7 @@
     font-size: 20px;
     padding: 4px 12px;
     width: 219px;
+    min-width: 130px;
     height: 52px;
     background: #ffffff;
     border: 1px solid #79747e;
