Feat: Obtiene  variable completada desde variable-upload
Si todas las variables del eje han sido completadas se cargan al reporte completo - cuando se implementen endpoints se enviaran al back

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -7,7 +7,7 @@
     <app-variable-upload
       [indexAlphabet]="biAlphabet[i]"
       [variableValue]="variable"
-      (goOutPreview)="getVariablesToUpload($event)"
+      (variableToUpload)="getVariablesToUpload($event)"
     ></app-variable-upload>
   </div>
 </section>
