--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -1,4 +1,4 @@
-<section class="report">
+<section class="report" *ngIf="!flagLastAxe">
   <h1 class="report__title">{{ axeToUpload }}</h1>
   <div
     class="report__variable"
@@ -8,6 +8,37 @@
       [indexAlphabet]="biAlphabet[i]"
       [variableValue]="variable"
       (variableToUpload)="getVariablesToUpload($event)"
+      (variableSaveExit)="getVariablesToSaveExit($event)"
+      (variableGoBack)="getVariablesToSaveGoBack($event)"
+    ></app-variable-upload>
+  </div>
+</section>
+<section class="report" *ngIf="flagLastAxe">
+  <div class="report-complete">
+    <div class="report-complete__conteiner" *ngFor="let item of report">
+      <h1 class="report-complete__title">{{ item.axe }}</h1>
+      <div class="report-complete__completed">
+        <p class="report-complete__text">Completo</p>
+        <img
+          class="report-complete__ico-check"
+          src="../../../../../assets/icons/checked white.svg"
+          alt="Icono check"
+        />
+      </div>
+    </div>
+  </div>
+
+  <h1 class="report__title">{{ axeToUpload }}</h1>
+  <div
+    class="report__variable"
+    *ngFor="let variable of variablesReport; let i = index"
+  >
+    <app-variable-upload
+      [indexAlphabet]="biAlphabet[i]"
+      [variableValue]="variable"
+      (variableToUpload)="getVariablesToUpload($event)"
+      (variableSaveExit)="getVariablesToSaveExit($event)"
+      (variableGoBack)="getVariablesToSaveGoBack($event)"
     ></app-variable-upload>
   </div>
 </section>
