--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -1,4 +1,5 @@
-<section class="report" *ngIf="!flagLastAxe">
+<!-- VISTA DE EJES A COMPLETAR, UNO POR VEZ -->
+<section class="report" *ngIf="!flagLastAxe" #scroll>
   <h1 class="report__title">
     EJE {{ indexOfAxe }}: {{ axeToUpload.toUpperCase() }}
   </h1>
@@ -15,6 +16,7 @@
     ></app-variable-upload>
   </div>
 </section>
+<!-- VISTA CUANDO TODOS LOS EJES FUERON COMPLETADOS -->
 <section class="report" *ngIf="flagLastAxe">
   <div class="report-complete">
     <div
