--- a/src/app/modules/user/components/report-upload/report-upload.component.scss
+++ b/src/app/modules/user/components/report-upload/report-upload.component.scss
@@ -1,7 +1,20 @@
 @import "../../../../../styles/variables.scss";
 .report {
   width: 100%;
+  height: 100%;
   font-size: 16px;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 15px; /* width of the entire scrollbar */
+  }
+  &::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255); /* color of the tracking area */
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #d9d9d9; /* color of the scroll thumb */
+    border-radius: 50px; /* roundness of the scroll thumb */
+    border: 1px solid #ffffff; /* creates padding around scroll thumb */
+  }
   .report__title {
     display: flex;
     align-items: center;
@@ -37,6 +50,7 @@
     .report-complete__completed {
       display: flex;
       align-items: center;
+      -moz-column-gap: 0.375em;
       column-gap: 0.375em;
       margin-left: 1.5625em;
       .report-complete__text {
