--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
@@ -57,18 +57,6 @@
     margin: 32px auto 0;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    overflow-y: scroll;
-    &::-webkit-scrollbar {
-      width: 15px; /* width of the entire scrollbar */
-    }
-    &::-webkit-scrollbar-track {
-      background: rgb(255, 255, 255); /* color of the tracking area */
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: #d9d9d9; /* color of the scroll thumb */
-      border-radius: 50px; /* roundness of the scroll thumb */
-      border: 1px solid #ffffff; /* creates padding around scroll thumb */
-    }
   }
 }
 .header-container {
@@ -134,6 +122,7 @@
     grid-area: "footer-btn";
     display: flex;
     justify-content: flex-end;
+    -moz-column-gap: 20px;
     column-gap: 20px;
     .footer__btn-confirm-axe {
       justify-self: flex-end;
