Feat: Agrega Imagen de Barra de progreso
Solo a modo visual ya que luego sera maquetada por Mati

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -14,7 +14,14 @@
   </section>
   <section class="upload-report__progress">
     <h1 class="upload-report__title">CARGA DE REPORTE</h1>
-    <div class="progress-bar"></div>
+    <div class="progress-bar">
+      <!-- Aqui iria la maqueta de la barra de progreso -->
+      <img
+        class="progress-bar__img"
+        src="../../../../../assets/images/progressBar.png"
+        alt=""
+      />
+    </div>
     <button
       mat-raised-button
       class="upload-report__btn-close-save"
