--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.scss
@@ -40,6 +40,9 @@
     }
     .progress-bar {
       width: auto;
+      .progress-bar__img {
+        padding-top: 15px;
+      }
     }
     .upload-report__btn-close-save {
       font-size: 20px;
