--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -24,32 +24,7 @@
       Cerrar y Guardar
     </button>
   </section>
-  <section class="upload-report__conteiner">
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-
-    <h1>Test</h1>
-    <h1>Test</h1>
-    <h1>Test</h1>
-
-    <h1>Test</h1>
-    <h1>Test</h1>
-  </section>
+  <section class="upload-report__conteiner"></section>
   <section class="footer">
     <div class="footer__direction"></div>
     <img
