Feat: Agrega modal para Todos los ejes fueron cargados

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -51,4 +51,11 @@
       placeholder="Ingrese texto"
     ></textarea>
   </div>
+  <app-pop-up-success
+    [flagAxeSuccess]="flagAxeSuccess"
+    [textSuccess]="
+      '¡Eje guardado con éxito! Todos los Ejes han sido completados'
+    "
+  >
+  </app-pop-up-success>
 </section>
