Feat: Agrega flag de enviar reporte
Para renderizar el modal de enviar reporte en el componente report upload y que el usuario pueda aceptar o cancelar el envio

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -35,9 +35,11 @@
     <app-report-upload
       [idReport]="idReport"
       [flagLastAxe]="flagLastAxe"
+      [flagEndReport]="flagEndReport"
       (reportToUpload)="getReportToUpload($event)"
       (flagBtnGoBack)="getFlagBtnGoBack($event)"
       (flagLastAxeEmit)="getFlagLastAxeEmit($event)"
+      (flagEndReportEmit)="getFlagEndReportEmit($event)"
     ></app-report-upload>
   </section>
   <section class="footer">
