Feat: agrega llamada al componente

--- a/src/app/modules/user/containers/upload-reports/upload-reports.component.html
+++ b/src/app/modules/user/containers/upload-reports/upload-reports.component.html
@@ -16,11 +16,7 @@
     <h1 class="upload-report__title">CARGA DE REPORTE</h1>
     <div class="progress-bar">
       <!-- Aqui iria la maqueta de la barra de progreso -->
-      <img
-        class="progress-bar__img"
-        src="../../../../../assets/images/progressBar.png"
-        alt=""
-      />
+      <app-progress-bar></app-progress-bar>
     </div>
     <button
       mat-raised-button
