--- a/src/app/core/layouts/components/header-general/header-general.component.html
+++ b/src/app/core/layouts/components/header-general/header-general.component.html
@@ -11,7 +11,7 @@
         src="../../../../../assets/icons/account_circle_filled.svg"
         alt="Icono de usuario logeado"
       />
-      <p class="header__usuario-name">{{ user }}</p>
+      <p class="header__usuario-name">{{ userData.nombre }}</p>
     </div>
   </header>
   <div class="lines-container">
