Feat: agrega contenido al modal de editar

--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -93,7 +93,7 @@
         <div class="modal__container">
             <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
             <p class="modal__text">
-
+                ¡Reporte Editado con éxito y enviado correctamente a los Centros Asignados!
             </p>
         </div>
     </div>
